2000-06-22  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi: Fixed some typos and syntax errors.
	* docs/user-ref.texi: Likewise.
	
2000-06-21  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/stage2.c (run_menu): Initialize CUR_ENTRY at the
	definition.
	If SHOW_MENU is zero, don't display the menu interface. Instead,
	wait until the timeout is expired and then boot the default
	entry. If the user presses `ESC' during the timeout, set
	SHOW_MENU to one and break the loop.
	Display the menu if SHOW_MENU is true, instead of if
	GRUB_TIMEOUT is non-zero.
	Set SHOW_MENU to one before go to the label `restart'.
	* stage2/builtins.c (show_menu): New global variable.
	(hiddenmenu_func): New function.
	(builtin_hiddenmenu): New variable.
	(builtin_table): Added a pointer to BUILTIN_HIDDENMENU.
	* stage2/shared.h (show_menu): Declared.
	
2000-06-19  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/mdate-sh: Moved to ...
	* mdate-sh: ... here.
	* docs/texinfo.tex: Moved to ...
	* texinfo.tex: ... here.
	
2000-06-09  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/mb_info.h (AddrRangeDesc): Use one 64bits field instead
	of two 32bits fields for BaseAddr and Length, respectively.
	BaseAddrLow + BaseAddrHigh -> BaseAddr, LengthLow + LengthHigh
	-> Length.
	* stage2/builtins.c (displaymem_func): Print BaseAddr >> 32,
	BaseAddr & 0xFFFFFFFF, Length >> 32 and Length & 0xFFFFFFFF,
	instead of BaseAddrLow, BaseAddrHigh, LengthLow and LengthHigh,
	for MAP.
	* stage2/common.c (fakemap): Adjusted to the new definition of
	AddrRangeDesc.
	(mmap_avail_at): Change the type of TOP to unsigned long long.
	If TOP is greater than 0xFFFFFFFF, set it to 0xFFFFFFFF, since
	GRUB itself cannot deal with 64bits addresses at the moment.
	(init_bios_info): When getting a maximum available address from
	the memory map, use a new unsigned long long variable MAX_ADDR
	as the temporary variable instead of MEMTMP. This should allow
	GRUB to detect at most 4TB.
	
2000-06-18  OKUJI Yoshinori  <okuji@gnu.org>
