@@ -1932,39 +1932,51 @@ static int
 kernel_func (char *arg, int flags)
 {
   int len;
-  char *kernel_arg = arg;
   kernel_t suggested_type = KERNEL_TYPE_NONE;
+  unsigned long load_flags = 0;
 
-  /* If the option `--type=TYPE' is specified, convert the string to
-     a kernel type.  */
-  if (grub_memcmp (arg, "--type=", 7) == 0)
+  /* Deal with GNU-style long options.  */
+  while (1)
     {
-      arg += 7;
-      
-      if (grub_memcmp (arg, "netbsd", 6) == 0)
-	suggested_type = KERNEL_TYPE_NETBSD;
-      else if (grub_memcmp (arg, "freebsd", 7) == 0)
-	suggested_type = KERNEL_TYPE_FREEBSD;
-      else if (grub_memcmp (arg, "openbsd", 7) == 0)
-	/* XXX: For now, OpenBSD is identical to NetBSD, from GRUB's
-	   point of view.  */
-	suggested_type = KERNEL_TYPE_NETBSD;
-      else if (grub_memcmp (arg, "linux", 5) == 0)
-	suggested_type = KERNEL_TYPE_LINUX;
-      else if (grub_memcmp (arg, "biglinux", 8) == 0)
-	suggested_type = KERNEL_TYPE_BIG_LINUX;
-      else if (grub_memcmp (arg, "multiboot", 9) == 0)
-	suggested_type = KERNEL_TYPE_MULTIBOOT;
-      else
+      /* If the option `--type=TYPE' is specified, convert the string to
+	 a kernel type.  */
+      if (grub_memcmp (arg, "--type=", 7) == 0)
 	{
-	  errnum = ERR_BAD_ARGUMENT;
-	  return 1;
+	  arg += 7;
+	  
+	  if (grub_memcmp (arg, "netbsd", 6) == 0)
+	    suggested_type = KERNEL_TYPE_NETBSD;
+	  else if (grub_memcmp (arg, "freebsd", 7) == 0)
+	    suggested_type = KERNEL_TYPE_FREEBSD;
+	  else if (grub_memcmp (arg, "openbsd", 7) == 0)
+	    /* XXX: For now, OpenBSD is identical to NetBSD, from GRUB's
+	       point of view.  */
+	    suggested_type = KERNEL_TYPE_NETBSD;
+	  else if (grub_memcmp (arg, "linux", 5) == 0)
+	    suggested_type = KERNEL_TYPE_LINUX;
+	  else if (grub_memcmp (arg, "biglinux", 8) == 0)
+	    suggested_type = KERNEL_TYPE_BIG_LINUX;
+	  else if (grub_memcmp (arg, "multiboot", 9) == 0)
+	    suggested_type = KERNEL_TYPE_MULTIBOOT;
+	  else
+	    {
+	      errnum = ERR_BAD_ARGUMENT;
+	      return 1;
+	    }
 	}
+      /* If the `--no-mem-option' is specified, don't pass a Linux's mem
+	 option automatically. If the kernel is another type, this flag
+	 has no effect.  */
+      else if (grub_memcmp (arg, "--no-mem-option", 15) == 0)
+	load_flags |= KERNEL_LOAD_NO_MEM_OPTION;
+      else
+	break;
 
-      kernel_arg = skip_to (0, arg);
+      /* Try the next.  */
+      arg = skip_to (0, arg);
     }
       
-  len = grub_strlen (kernel_arg);
+  len = grub_strlen (arg);
 
   /* Reset MB_CMDLINE.  */
   mb_cmdline = (char *) MB_CMDLINE_BUF;
@@ -1975,8 +1987,8 @@ kernel_func (char *arg, int flags)
     }
 
   /* Copy the command-line to MB_CMDLINE.  */
-  grub_memmove (mb_cmdline, kernel_arg, len + 1);
-  kernel_type = load_image (kernel_arg, mb_cmdline, suggested_type);
+  grub_memmove (mb_cmdline, arg, len + 1);
+  kernel_type = load_image (arg, mb_cmdline, suggested_type, load_flags);
   if (kernel_type == KERNEL_TYPE_NONE)
     return 1;
 
@@ -1989,13 +2001,14 @@ static struct builtin builtin_kernel =
   "kernel",
   kernel_func,
   BUILTIN_CMDLINE,
-  "kernel [--type=TYPE] FILE [ARG ...]",
+  "kernel [--no-mem-option] [--type=TYPE] FILE [ARG ...]",
   "Attempt to load the primary boot image from FILE. The rest of the"
   "line is passed verbatim as the \"kernel command line\".  Any modules"
   " must be reloaded after using this command. The option --type is used"
   " to suggest what type of kernel to be loaded. TYPE must be either of"
   " \"netbsd\", \"freebsd\", \"openbsd\", \"linux\", \"biglinux\" and"
-  " \"multiboot\"."
+  " \"multiboot\". The option --no-mem-option tells GRUB not to pass a"
+  " Linux's mem option automatically."
 };
 
 
